# uniqa-conversion-coach

./: .gitignore  README.md  pixi.toml  pyproject.toml
calculator/: capture.py  contracts.py  eventproc.py  funnel.py  journey.py  play.py  scope.py  sim.py  tlm.py  widget.py
coach/: baseline.py  coach.py  coach_io.py  coach_loop.py  coach_prompt.py  interventions.py
deferred/: PERSONA_MODEL_PLAN.md  PERSONA_TLM_DESIGN.md  TLM_RESEARCH.md  autoresearch.py  coach_autoimprove_z3.py  simulation.py
demo/: README.md  UNIQA_FUNNEL_SPEC.md  package-lock.json  package.json  streamlit_app.py
docs/: ANALYSIS.md  ARCHITECTURE.md  AUTORESEARCH.md  BUILD_PLAN.md  COACH_HYPOTHESES.md  COACH_MODEL.md  EXECUTIVE_OVERVIEW.md  FUNNEL_AUTOPSY.md  GDPR_AI_ACT_SPEC.md  HARDENING_PLAN.md  HYPOTHESES.md  INTERVENTION_DESIGN.md  PERSONA_DISTILL_V2_PLAN.md  PERSONA_MODEL_PLAN.md  PERSONA_PLAYBOOK.md  PERSONA_TLM_DESIGN.md  PERSONA_TRAIN_PLAN.md  PIPELINE_PLAN.md  PRODUCT_VISION.md  PSYCHE_WALKTHROUGH.md  REPORT_distillation_collapse.md  RESEARCH_insurance_conversion.md  ROADMAP_FINAL.md  SIGNALS_AND_DETECTION.md  SYSTEM_FRAME.md  WAR_PLAN.md  WIDGET_DESIGN.md  WIDGET_MODEL_SPEC.md  WIDGET_TWIN_DESIGN.md
evals/: README.md  persona_stats_eval.py
evaluations/: README.md  compare.py  persona_stats_eval.py
leonardo/: README.md  batched_teacher.py  eval_local.py  eval_local_batched.py  local_teacher.py  show_eval.py  slurm_eval_batched.sh  slurm_eval_one.sh  slurm_finetune.sh
persona/: persona_datagen.py  personas.py  psyche.py
research/: PERSONA_PARAM_MODEL.md  README.md  run.py  (+10 more)
(+192 files in other folders)
